--- a/Gradebook.vcxproj
+++ b/Gradebook.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Gradebook.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Gradebook-old\include\Add.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
