--- a/Gradebook.vcxproj.filters
+++ b/Gradebook.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Add.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Add.hpp">
