--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,10 +3,13 @@
         {
             "type": "cppbuild",
             "label": "C/C++: clang++ build active file",
-            "command": "/usr/bin/clang++",
+            "command": "clang++",
             "args": [
                 "-fdiagnostics-color=always",
+                "-std=c++20",
                 "-g",
+                "-I",
+                "../include",
                 // "${file}",
                 "-o",
                 "${fileDirname}/a.out",
