--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
+
             "name": "clang++ - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
@@ -23,7 +24,7 @@
                 }
             ],
             "preLaunchTask": "C/C++: clang++ build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
+            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe"
         }
     ]
 }
