--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,8 +8,11 @@ on:
 
 jobs:
   build:
-
-    runs-on: [ubuntu-latest, windows-latest, macOS-latest]
+    strategy:
+      matrix: 
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+  
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v
