--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,11 +10,15 @@ jobs:
   build:
     strategy:
       matrix: 
-        os: [windows-latest]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
   
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
+    - name: clean
+      run: make clean
     - name: make
       run: make
+    - name: clean
+      run: make clean
