--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,16 +7,22 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    strategy:
-      matrix: 
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-  
-    runs-on: ${{ matrix.os }}
+  build-windows:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: make
+    - name: make windows
       run: make
     - name: clean
       run: make clean
+  build-ubuntu:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: make ubuntu
+      run: make
+    - name: clean
+      run: make clean
+    
