--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,4 +25,16 @@ jobs:
       run: make
     - name: clean
       run: make clean
+  
+  release:
+    runs-on: windows-latest
     
+    steps:
+      - name: Action Release
+        # You may pin to the exact commit or the version.
+        uses: yakuhzi/release-asset@v1.2.3
+        with:
+          # File to upload to the release
+          file: builds/Gradebook-windows.exe builds/Gradebook-ubuntu.exe
+          # Path to changelog file
+          changelog: changelog.txt
