--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,42 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Make - Build and debug project",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/builds/Gradebook-windows.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "Make",
+      "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe"
+    },
+    {
+      "name": "(Windows) Launch",
+      "type": "cppvsdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/builds/Gradebook.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "console": "integratedTerminal"
+    },
+    {
       "name": "clang++ - Build and debug active file",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${fileDirname}/../../builds/a.exe",
+      "program": "${workspaceFolder}/builds/Gradebook-windows.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
