--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,28 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Make - Build and debug project",
+      "name": "Make (Arch) - Build and debug project",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${workspaceFolder}/builds/Gradebook-arch.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "Make-Arch",
+      "miDebuggerPath": "/usr/bin/gdb"
+    },
+    {
+      "name": "Make (Windows) - Build and debug project",
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/builds/Gradebook-windows.exe",
@@ -22,7 +43,7 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "Make",
+      "preLaunchTask": "Make-Windows",
       "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe"
     },
     {
